tests/base/invalid/VarDecl_CompileFail_4.whiley
void System::main([string] args):
    x = y
    out.println(str(x))
